--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: ${{ env.SOURCE_REPO }}
-        token: ${{ secrets.SOURCE_REPO_TOKEN }}
+        token: ${{ steps.generate_token.outputs.token }}
         path: source-repo
 
     - name: Get latest release from powerLoad Repo
